logs/axui.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/AXUI'...
Listing './lib/python3.5/site-packages/AXUI/XML'...
Listing './lib/python3.5/site-packages/AXUI/XML/schemas'...
Listing './lib/python3.5/site-packages/AXUI/driver'...
Listing './lib/python3.5/site-packages/AXUI/driver/appium_driver'...
Compiling './lib/python3.5/site-packages/AXUI/driver/appium_driver/UIElement.py'...
***   File "./lib/python3.5/site-packages/AXUI/driver/appium_driver/UIElement.py", line 10
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AXUI/driver/fake_driver'...
Listing './lib/python3.5/site-packages/AXUI/driver/selenium_driver'...
Compiling './lib/python3.5/site-packages/AXUI/driver/selenium_driver/UIElement.py'...
***   File "./lib/python3.5/site-packages/AXUI/driver/selenium_driver/UIElement.py", line 10
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AXUI/driver/template_driver'...
Listing './lib/python3.5/site-packages/AXUI/driver/windows_driver'...
Listing './lib/python3.5/site-packages/AXUI/driver/windows_driver/screenshot'...
Listing './lib/python3.5/site-packages/AXUI/driver/windows_driver/win32'...
Listing './lib/python3.5/site-packages/AXUI/image'...
Listing './lib/python3.5/site-packages/AXUI/logger'...
Listing './lib/python3.5/site-packages/AXUI/parsing'...
Listing './lib/python3.5/site-packages/AXUI-0.2.4.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/PyXB-1.2.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/pyxb'...
Listing './lib/python3.5/site-packages/pyxb/binding'...
Listing './lib/python3.5/site-packages/pyxb/bundles'...
Listing './lib/python3.5/site-packages/pyxb/bundles/common'...
Listing './lib/python3.5/site-packages/pyxb/bundles/common/raw'...
Listing './lib/python3.5/site-packages/pyxb/bundles/dc'...
Listing './lib/python3.5/site-packages/pyxb/bundles/dc/raw'...
Listing './lib/python3.5/site-packages/pyxb/bundles/saml20'...
Listing './lib/python3.5/site-packages/pyxb/bundles/saml20/raw'...
Listing './lib/python3.5/site-packages/pyxb/bundles/wssplat'...
Listing './lib/python3.5/site-packages/pyxb/bundles/wssplat/raw'...
Listing './lib/python3.5/site-packages/pyxb/namespace'...
Listing './lib/python3.5/site-packages/pyxb/utils'...
Listing './lib/python3.5/site-packages/pyxb/xmlschema'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
